words sortout complete from ya to La

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1,6 +1,6 @@
 %\begin{multicols}{2}
 \begin{center}
-{\huge\bfseries anubaMdha - 1}
+{\huge\bfseries anubaMdha 1 - hecicxna pAriBASika padagaLu}
 \end{center}
 
 \medskip
@@ -1126,7 +1126,222 @@ BUtaBaviSayxdavxtaRmAnakekx horagAdavanu. adeV riVti paramAtamxnu elalx kaDeyU i
 \ullekha{molemuDiyidadx\-DeVnu mUgilalxdavaLiMge ? (savasaM. 5; akakxma. 346-103).}}
 \end{entry}
 
-%raghu
+%ra
+\begin{entry}
+\word{rudarxna nosalagaNiNxna kicucx}
+\src{va}
+\meaning{\arthanonum{paMcamUtiR\-gaLalolxbabxnAda rudarxnu paMcakaqtayxgaLalolxMdAda
+ vishavxsaMhAravanunx mADutAtxne. avana mUraneV kaNuNx haNeyalilxdudx
+adakekx jagatatxnenx saMharisuva shakitx ide. Adare I vacanadalilx
+nosalagaNiNxna kicucx eMba padavu AlaMkArikavAgi
+baLakeyAgide. parxtiyobabxna hububxgaLa madheyx AjAcnxcakarxvidudx,
+AdhAyxtimxka shikaSxNadiMda adu jAgarxtavAdAga, sAdhakanu alilx
+aparx\-tima beLakanunx kANutAtxne. adeV nosalagaNiNxna kicucx. iSuTx
+AdhAyxtimxka parxgati sAdhisidavananunx tirxpuragaLa (sUthxla,
+sUkaSxmX matutx kAraNashariVragaLa) athavA malavanunx suTiTxdAdxne
+eMbudu I mAtina athaR (va.pa.koV. 315):}
+\ullekha{rudarxna nosala kaNaNx kicicx\-noLage tirxpurava suDalariyade kAmana kaNaNx kicicxnoLage tirxpurava suDutitxdadxru (savasaM. 2; alalxma. 485-133).}}
+\end{entry}
+
+\begin{entry}
+\word{rudarxna pAshava hodadxdiruvudu}
+\src{va}
+\meaning{\arthanonum{rudarxnu parashivana Ajecnxya meVrege parxpaMcavanunx saMhAra mADutAtxne. Adare, saMhAraveV koneyalalx. kelakAlada meVle, barxhamxnu vayxkitxgaLa kamaRgaLiganuguNavAgi janaranUnx parxpaMcavanUnx matetx saqSiTxsutAtxne.  I janamxdalelxV liMgAMgasAmarasayx paDeda layakekx oLagAguvudilalx, matetx huTuTxvudU ilalx (va.pa.koV. 315):}
+\ullekha{jaMgamava kuritu mADuvalilx rudarxna pAshava hodadxdirabeVku (savasaM. 7; nuliya. 1304-428).}}
+\end{entry}
+
+\begin{entry}
+\word{rudarxmUtiR jaMgamavAguvudu}
+\src{va}
+\meaning{\arthanonum{jaMgamanu \hbox{sAvxthaR} AsegaLige sikikx tiruguvudAdare, avanu matotxmemx layakekx (rudarxna pAshakekx) oLagAgutAtxne eMdathaR. nijavAda Bakatxnu barxhamxmUtiR, viSuNxmUtiR, rudarxmUtiR I mUvariMdalU tapipxsikoLaLxbeVku (vapakoV. 316):}
+\ullekha{barxhamxmUtiR guru\-vAda; viSuNxmUtiR liMgavAda, rudarxmUtiR jaMgamavAda, iMtiV mUvaru baMda Bavava noVDA (savasaM. 4; moVLimA. 1767-600).}}
+\newmeaning{\ni{rudarxya mUtiRH - rudarxmUtiRH; rudarxsayx mUtiRH iva mUtiRH yasayx saH - rudarxmUtiRH}}
+\end{entry}
+
+\begin{entry}
+\word{liMgada pUvARsharxyava kaLeyuvudu}
+\src{va}
+\meaning{\arthanonum{liMgaveMba jaDavasutxvanunx obabx manuSayxnu mADutAtxne. adara meVlina kaMtheyanunx matotxbabx mADutAtxne. Adare aSaTxkekx A vasutxvu pUjAyoVgayxvAgi iSaTxliMgavenisikoLuLxvudilalx. adaralilx \hbox{citatxnunx} parxtiSAThxpisi, adara mahatavxvanunx tiLisikoDalu guru beVku. hasatxmasatxkasaMyoVgavanonxLagoLuLxva diVkeSx naDedAgale, adara pUvARsharxya kaLedu iSaTxliMga (pArxNaliMgada kuruhu) AyiteMdathaR (va.pa.koV. 323):}
+\ullekha{liMgada pUvARsharxyava kaLedu, idu pArxNaliMgaveMdu toVrabaMdanayAyx basa\-vaNaNxnu (savasaM. 3; cenanxba. 8-5).}}
+\end{entry}
+
+%la
+\begin{entry}
+\word{liMgaBoVgoVpaBoVgiya saMgasuKa}
+\src{va}
+\meaning{\arthanonum{tananx deVheVM\-dirxyAdigaLanunx liMgakakxpiRsi, A
+ deVheVMdirxyAdigaLa mUlakaveV parashivanu suKisutAtxneMdU, tAnu
+ anaMtara suKisutetxVneMdU naMbuvavanu paDuva suKa (va.pa.koV. 325):}
+\ullekha{idu liMgaBoVgoVpaBoVgiya saMgada suKa niraMgada nishacxya (savasaM. 5; moVLima. 1171-348).}}
+\end{entry}
+
+%va
+\begin{entry}
+\word{viSuNxvina pAshakokxLagAguvudu}
+\src{va}
+\meaning{\arthanonum{viSuNxveMdare sithxtikataR. inonxMdathaRdalilx viSuNxvu jAcnxnashakitxya adhideVvate. kelavaru tamamx jiVvanavanunx muMduvaresalu liMgapUjeyanunx upayoVgisikoLuLxtAtxre. aMtha liMgapUjakaru mADuva parxyatanxgaLige jAcnxnashakitx beVku. idara duSaTx parxBAvadiMdAgi manuSayxnu aneVka riVtiya kamaRgaLanunx mADi baMdhanakokxLagAguvudariMda, avaru liMgapUjeya mUlaka parashivananunx kANalu sAdhayxvilalx. avaru viSuNxvina pAshakokxLagAgiyeV irutAtxre. (va.pa.koV. 339)}
+\ullekha{liMgapUjakarelalxrU viSuNxvina pAshakokxLagAdaru. jaMgama pUjakarelalxrU rudarxna pAshakokxLagAdaru. (savasaM. 8; moVLimA. 1725-587).}}
+\end{entry}
+
+\begin{entry}
+\word{viSuNxvina saMtoVSakekx sikakxdiruvudu}
+\src{va}
+\meaning{\arthanonum{viSuNxvu \hbox{shivana} \hbox{Ajecnxya} meVrege jagatatxnunx rakiSxsutAtxne. nAvU namamxnunx rakiSxsikoLaLxlu athavA pArxpaMcika suKa paDeyalu hAtoreyutitxrutetxVve. hiVge pArxpaMcika suKakekx hAtoreyadiruvudeV viSuNxvina saMtoVSakekx sikakxdiruvudu eMbudakakxthaR. idu jiVvanumxkatxnigaSeTxV sAdhayx. (va.pa.koV. 339)}
+\ullekha{liMgama kuritu mADuvalilx viSuNxvina saMtoVSakekx sikakxdirabeVku. (savasaM. 7; nuliceM. 1308-428).}}
+\end{entry}
 
 
+%%%sha
+\begin{entry}
+\word{shorxVtarxda keYgaLalapiRsuvudu}
+\src{va}
+\meaning{\arthanonum{nAvu sAmAnayxvAgi padAthaRgaLanunx keYgaLiMda neYveVdayx mADutetxVve. AdhAyxtimxka parxgati sAdhisidavanu shabadxvanunx kivigaLeMba keYyiMda apiRsi, AmeVle tAnu keVLisikoLuLxtAtxne. aMdare rUpa, rasa, gaMdha muMtAda yAvudeV viSayavu avana tanu tAgada munanx, adanunx avanu manasisxnalelxV liMgakekx apiRsida naMtara tAnu anuBavisutAtxne (va.pa.koV. 373):}
+\ullekha{kaMgaLa keYgaLalapiRsuva, shorxVtarxda keYgaLalapiRsuva nAsikava keYgaLalapiRsuva jihevxya keYgaLalapiRsuva (savasaM. 3; cenanxba. 306-96).}}
+\end{entry}
 
+\begin{entry}
+\word{shorxVtarxdiMda apiRsuvudu}
+\src{va}
+\meaning{\arthanonum{shorxVterxVMdirxyadiMda nAvu keTaTxshabadxgaLanunx oLeLxya shabadxgaLiMda parxteyxVkisi, oLeLxya shabadxvananxSeTxV liMgakekx apiRsabeVku. oMdu vishAlAthaRdalilx, nisAvxthaR BAvane\-yiMda apiRsuvavanu liMgakekx oMdu nishicxta parxdeVshadalilx matutx oMdu nishicxta samayadalilx shabadxvanunx apiRsade, manasisxnalilxyeV liMgavanunx nenedu, manasisxnalilxyeV shabadxvanunx adakekx apiRsi, anaMtara tAnu anuBavisutAtxne (adeV riVti sapxsheRVMdirxyadiMda sapxshaRnavanUnx, rasaneVMdirxyadiMda mahArasavanUnx manasisxnalelxV apiRsi anaMtara BoVgisabeVkeMdu cenanx\-basavaNaNxnavaru heVLutAtxre) (va.pa.koV. 373):}
+\ullekha{sushabadhxvanu shorxVtarxdiMdave apiRsabeVku (savasaM. 3; cenanxba. 227-71)}}
+\end{entry}
+
+%%%Sa
+\begin{entry}
+\word{SaDivxkAragaLanunx keDisuvudu}
+\meaning{\arthanonum{SaDaBxvavikAragaLU saha AdhAyxtimxka jiVvanada veYrigaLeV. avugaLa horatu mukitx sAdhayxvilalx. vacanakAraru avugaLanunx keDisuva upAyavanunx hiVge tiLisidAdxre: nAnu savxtaMtarx asitxtavxvanunx paDedidedxVne eMdu tiLiyade nAnu guruvina kaqpAgaBaRdalilxdedxVneMdu tiLidare, `asitx' eMba vikAra keDutatxde. nAnu mAyeya pariNAmadiMda huTiTxdedxVne eMdu BAvisade, nAnu gurukarasaMjAta eMdu BAvisidare, `\hbox{jAyateV}' eMba vikAra keDutatxde. guruvu anugarxhisida sadABxvajAta liMgavanunx aMgadalilx dharisuva mUlaka taqpitxyanunx saMpAdisi, adariMda `vipariNamateV' eMba vikAravanunx keDisabahudu. guruvu toVrisikoTaTx AcAra matutx jAcnxnamAgaRdalilx naDedu AdhAyxtamxdalilx beLeyuva mUlaka `vivadhaRte' eMba vikAravanunx suDabahudu. deVheVMdirxyAdigaLelalx nananxvalalx, parashivanavu eMdu elalxvanUnx parashivanige apiRsuva mUlaka `apakiSxVyateV' eMba vikAravanunx keDisabahudu. maNiNxnalilx liVyavAguva badalu liMgAMga aikayxda mUlaka liMgadalilx liVyavAdare, vinashayxti eMba vikAravanunx keDisabahudu (noVDi. SaDABxva vikAra) (va.pa.koV. 377); shirxVruguvina kaqpAgaBaRda madhayxdalilxdaRva nAnahudeMdaradAgade asitix Ekate vikAra keTiTxtutx asitx jAyateV vipariNamateV vivadhaRteV apeVkiSxVyateV vinashayxti eMba SaDABxva vikAraMgaLu keDuvudakekx vivaraveMteMdaDe (savasaM. 11; savxtaMtarx. 911-455).}}
+\end{entry}
+
+
+%%sa
+\begin{entry}
+\word{saMkiSxpatx BasamxtayArikeya vidhAna}
+\src{saM}
+\meaning{\arthanonum{sadoyxVjAta\-maMtarxdiMda goVmayavanunx saMgarxhisi, vAmadeVvamaMtarxdiMda adanunx aBimaMtirxsabeVku. aGoVramaMtarxdiMda uMDe\-gaLanunx suTuTx, tatupxruSamaMtarxdiMda sivxVkarisi, parxtinitayxvU IshAnamaMtarxdiMda elalx aMgAMgagaLige dharisabeVku.}}
+\smallskip
+\begin{shl}
+vidhAMtaraM parxvakASxyXmi BasamxsaMpAdanaM laGu |\\[1pt]
+sadeyxVna goVshakaqdf gArxhayxM vAmeVna tavxBimaMtarxyeVtf ||\\[1pt]
+aGoVreVNa daheVtf piMDaM gArxhayxM tatupxruSeVNa tu |\\[1pt]
+nitayxmiVshAnamaMterxVNa sAvxMgeV dhAyaRM parxyatanxtaH ||
+\end{shl}
+\medskip
+\pauthor{(caM. A., kirx. pA., 6. 29-30)}
+\smallskip
+\newmeaning{\arthanonum{baqhajAjxbAloVpaniSatitxna parxkAra, Basamxvanunx - tayArikeya vidhAnada AdhAradiMda anukalapx, upakalapx, upoVpakalapx matutx akalapx eMdu nAlukx vidhavAgi gurutisutAtxre. aginxhoVtarx virajAginxyiMda utApxditavAdadudx anukalapx. kADinalilx oNagida goVmaya\-vanunx saMgarxhisi, kalopxVkatxvidhiyiMda tayArisida Basamx upakalapx. kADinalilx oNagida goVmayavanunx saMgarxhisi, adanunx puDimADi goVmUtarxdoMdige uMDemADi kalopxVkatxvidhiyaMte tayArisidudx upoVpakalapx Basamx matutx shivAlayadalilxruva Basamxvu akalapx athavA shatakalapx enisutatxde.}}
+\smallskip
+\begin{shl}
+atha catuviRdhaM Basamxkalapxmf | parxthamamanukalapxmf |\\[1pt]
+divxtiVyamupakalapxmf | upoVpakalapxM taqtiVyamf | akalapxM catuthaRmf |
+aginxhoVtarxsamudUBxtaM virajAnalajamanukalapxmf | vaneV shuSakxM
+shakaqtf saMgaqhayx kalopxVkatxvidhinA kalipxtamupakalapxM sAyxtf | araNeyxV\\[1pt]
+shuSakxgoVmayaM cUNiRVkaqtAyxnusaMgaqhayx goVmUterxYH piMDiVkaqtayx
+kalopxVkatxvidhinA kalipxtaM upoVpakalapxmf | shivAlayasathxmf akalapxM shatakalapxM ca | 
+\end{shl}
+\smallskip
+\pauthor{(baq. jA. u., 3. 36-38)}
+\smallskip
+\newmeaning{\arthanonum{tayArikeya karxmadiMda Basamxvu kalapx, anukalapx, upakalapx matutx akalapx eMdu nAlukx vidha. sadoyxVjAtamaMtarxdiMda hosadAda goVmayavAgutatxde (sagaNi) shAsotxrXVkatxvidhiyaMte tegedukoLaLxbeVku. vAmadeVvamaMtarxdiMda uMDemADi, tatupxruSamaMtarxdiMda oNagisi, aGoVramaMtarxdiMda beMkiyalilx suTuTx, IshAnamaMtarxvanunx heVLutAtx suTaTx Basamxda puDiyanunx bilavxpaterxyalilx iDabeVku. hiVge tayArisida Basamxvu kalapx enisutatxde. kADinalilx oNagida goVmayavanunx tegedukoMDu puDimADi suTiTxruva BasamxveV anukalapx. aMgaDi\-yalilxruva Basamxvanunx tegedukoMDu adanunx baTeTxyalilx soVsi, goVmUtarxdiMda uMDemADi pUvoRVkatx vidhiyaMte suTuTx tayArisida Basamxkekx upakalapx eMdu hesaru. anayxriMda tayArisida Basamxvu akalapx enisutatxde (idu \hbox{sidAdhxMta} shiKAmaNi riVtAyx).}}
+\smallskip
+\begin{shl}
+BasomxVtApxdanamudidxSaTxM catudhAR taMtarxveVdiBiH |\\[1pt]
+kalapxM ceYvAnukalapxM tu upakalapxmakalapxkamf ||\\[1pt]
+yathA shAsotxrXVkatxvidhinA gaqhiVtAvx goVmayaM navamf |\\[1pt]
+sadeyxVna vAmadeVveVna kayARtipxMDamanutatxmamf |\\[1pt]
+shoVSayeVtupxruSeVNeYva daheVdf GoVrAciCxvAginxnA ||\\[1pt]
+tata IshAnamaMterxVNa bilavxpaterxV nidhApayeVtf |\\[1pt]
+kalapxM tadaBxsamx vijecnxVyamanukalapxmathoVcayxteV ||\\[1pt]
+vaneVSu goVmayaM yacaCx shuSakxM cUNiRVkaqtaM tathA |\\[1pt]
+dagadhxM ceYvAnukalApxKayxM ApaNAdi gataM tu yatf ||\\[1pt]
+vasetxrXVNoVtAtxritaM Basamx goVmUtArxbadadhx piMDitamf |\\[1pt]
+dagadhxM pArxgukatxvidhinA BaveVdaBxsomxVpakalapxkamf ||\\[1pt]
+aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
+\end{shl}
+\smallskip
+\pauthor{(si. shi., 7. 13-19)}
+\end{entry}
+
+\begin{entry}
+\word{saMdanaLidu nilulxvudu}
+\src{va}
+\meaning{\arthanonum{Atamxnu tananx shudadhxrUpadalilx parashivanoMdige aikayxvAdAga avaribabxra madhayxda saMdu ilalxvAgutatxde. alalxde, aMganu parashivanalelxV nilulxtAtxne. hAge saMdanaLidu shivanalilx nelasuvudeV Atamxna dheyxVya (va.pa.koV. 386) (9:209):}
+\ullekha{madhura daMDa oraLige baMdu, maraLi beMdu, tirxguNadalilx hoMdi, kaDeyANeyAdaMte. oMdanoMdu kaMDu saMdanaLidu niMdudu, IshAnayxmUtiR malilxkAjuRnaliMgavu tAne (savasaM. 9; shivaleM. 209-75).}}
+\end{entry}
+
+\begin{entry}
+\word{sakAya muKadalilx akAya parxtibiMbisuvudu}
+\src{va}
+\meaning{\arthanonum{sakAya muKaveMdare kAyavuLaLxvanu eMdathaR; Adare aMtha muKa akAyananunx (kAyavilalxda parashiva) parxtibiMbisu\-vaMtirabeVku; aMdare avanu parashivanalilx liVyavAdavanirabeVku (va.pa.koV. 388):} \ullekha{akAyadalilx sakAya parxtibiMbisUdu. sakAyamuKadalilx akAya parxtibiMbisUdu (savasaM. 3; cenanxba. 394-124).}}
+\end{entry}
+
+\begin{entry}
+\word{sapatxvaNaRgaLa pariNAmagaLu}
+\src{va}
+\meaning{\arthanonum{manuSayxna deVhadalilx ELu vaNaRgaLidudx, avu bariya kaNuNxgaLige kANuvudilalx. Adare avu sAdhakanige kANisikoLuLxvuvu. vividha cakarxgaLu jAgarxtavAdAga vividha baNaNxgaLu kANisikoLuLxtatxve. \hbox{sAdhane} \hbox{inUnx} PalaparxdavAgade idAdxga avu mAnavana vataRneya meVle kelavu pariNAma mADutatxve. adara vivaragaLu hiVgive.}}
+\smallskip
+\newmeaning{\arthanonum{mUlAdhAradalilx parxdhAna aMsha paqthivxVtatatxvX, adaralilx kapila vaNaR\-vide. I vaNaRdiMdAgi manuSayxna deVhadalilx aLuku uMTAgutatxde. sAvxdhiSAThxna cakarxdalilx apupxvidudx, adaralilx niVlavaNaRvide. idariMdAgi deVha naDuguvudu. maNipUrakacakarxdalilx aginxtatatxvXvidudx, adaralilx mAMjiSaTx vaNaRvide. idara pariNAmavAgi nAvu kanasu kANutetxVve. anAhatacakarxdalilx vAyu aMsha parxdhAnavAgidudx, adaralilx (piVta) haLadi vaNaRvirutatxde. idara pariNAmavAgi deVhada oLagaDe otutx uMTAgu\-tatxde. vishudidhxcakarxdalilx AkAshatatatxvX parxdhAnavAgidudx, adaralilx kapupx vaNaRvide. idara pArxbalayxdiMdAgi namage goMdala uMTAgi, deVhavu tatatxrisutatxde. AjAcnxcakarxdalilx caMdarxnidudx, adaralilx shevxVtavaNaRvide. idariMdAgi namage ciMte uMTAgu\-tatxde. barxhamxraMdharxdalilx sUyaRnidudx, adaralilx gwraNaRvide. idariMdAgi deVhadalilx saMcalane uMTAgutatxde. sAdhakanu tananx sAdhaneyiMdAgi I pariNAmagaLanunx niyaMtirxsabeVkeMbudu I vacanada sUcayx upadeVsha (va.pa.koV. 394).}}
+\smallskip
+\newmeaning{\arthanonum{kapilavaNaR niVlavaNaR mAMjiSaTxvaNaR piVta\-vaNaR kapupx\-vaNaR shevxVtavaNaR gwravaNaRveMba sapatxdhAtugaLu. ivakekx vivara:}
+\ullekha{kapilavaNaRda dhAtu paqthivx aMsha, deVha aLukutihudu. niVlavaNaRda dhAtu apupxvina aMsha deVhava [naDugutitxhudu]. mAMjiSaTxvaNaRda dhAtu aginx aMsha, deVha kanasa kANutihudu. piVtavaNaRda dhAtu vAyu aMsha, deVhavatatxra otutxtitxhudu. kapupx\-vaNaRda dhAtu AkAshada aMsha, etatxra tatatxrageDahutihudu. shevxVta\-vaNaRda dhAtu caMdarxna aMsha, deVha kaLavaLisutihudu. gwravaNaRda dhAtu sUyaRna aMsha, shariVra saMcalisutihudu. iMtiV sapatxdhAtugaLa savxsAthxnavaM mADi liMgAcaRneya mADalalxDe kUDala\-cenanxsaMgayayxnalilx sharaNanenisutihanu. (savasaM. 3; cenanxba. 1091-371).}}
+\end{entry}
+
+\begin{entry}
+\word{savARMgaloVcanavuLaLx jaMgama}
+\src{va}
+\meaning{\arthanonum{yAva \hbox{vayxkitxyu} sAvxnuBAvadiMdAgi nisAvxthaR budidhxyiMda parxpaMcavanunx noVDutAtxnoV avanige parxpaMcada parxtiyoMdu vasutxvU parashivana mUtiRyaMteV kANutatxde. avana parxtiyoMdu \hbox{aMgavU} shivananunx `kANu'tatxde. aMtaha vayxkitxyu nijavAda calisuva liMga (jaMgama) (va.pa.koV. 402):}
+\ullekha{tirxvidha liMgAnuBAvava boVdhisuvAtane savARMgaloVcanavuLaLx jaMgamaveMbe noVDA. (savasaM. 5; satayxkakx. 1209-365).}}
+\end{entry}
+
+\begin{entry}
+\word{savARMgasaMbaMdhavanaLisuvudu}
+\src{va}
+\meaning{\arthanonum{sAdhAraNavAgi BUtapaMcakagaLU, tanAmxterxgaLU, itara karaNAdigaLU \hbox{namamxnunx} baMdhanakikxVDumADutatxve. Adare AdhAyx\-timxka shakitxyiMda I BUtashakitxgaLanunx nAvu BakitxshakitxgaLanAnxgi mADidare, avu namamx AdhAyxtimxka parxgatiyalilx sahAyaka\-vAguvuvu. hiVge sUthxlAMgavu tananx doVSa\-gaLanunx kaLedukoMDu tAyxgAMgavenisikoLuLxvudu, sUkASxmXMgavu BoVgAMgavenisikoLuLxvudu matutx kAraNAMgavu yoVgAMga\-venisikoLuLxvudu. hiVge savARMgasaMbaMdhavanunx kaLacikoMDavanu liMgAMgasAmarasayxkekx yoVgayxnAgutAtxne (va.pa.koV. 403):}
+\ullekha{enanx savARMgasaMbaMdhavanaLisi savARMgadalilx savAR\-cAra saMpatutx toVri salahida nitayxvAgi niraMjana cananxbasavaliMga. (savasaM. 12; deVshikeVM. 46-13).}}
+\end{entry}
+
+\begin{entry}
+\word{saveVRMdirxyagaLu EkeVMdirxyavAguvudu}
+\meaning{\arthanonum{namamx elalx iMdirxyagaLanUnx parashivana oMdiMdirxyavanAnxgi mADuvudu:}
+\ullekha{BAvashudadhxvAgipapxlilx saveVRMdirxyaMgaLu EkeVMdirxyavAgi citatxshudadhx sididhxyAdalilx savaRjAcnxnasaMpananxnapapxnu. (savasaM. 7; turugA. 1012-308).}}
+\end{entry}
+
+\begin{entry}
+\word{sahasarxpatarxda navakamaLa siMhAsana}
+\src{va}
+\meaning{\arthanonum{taleyalilxruva padamxkekx sAviradaLagaLirutatxve. AdudariMda adakekx sahasarxpatarx\-navakamalaveMdu hesaru. adu parashivana sAthxnaveMdU, Aru cakarxgaLalilxruva AcArAdi liMgagaLiMda hiDidu mahA\-liMga\-davarege elalxvanUnx sididhxsikoMDanaMtara, sAdhakanu sahasArxra\-vanunx siMhAsana mADikoMDiruva shUnayxliMgavanunx sAdhisabeVku (va.pa.koV. 403):}
+\ullekha{nirahaMkArave shiKara, mahadahaMkArave shaqMgArakaLasha, sahasarxpatarxda navakamaLasiMhAsana, nitayxve malagu (savasaM. 9; saMapapx. 322-117).}}
+\newmeaning{\ni{sahasarxpatarxM ca tataf navakamalaM ca - sahasarxpatarxnavakamalaM; sahasarxpatarxnavakamalaM navasiMhAsanaM - sahasarxpatarx navakamala siMhAsanaM}}
+\end{entry}
+
+\begin{entry}
+\word{savxyasaMpakaRdiMda odagida beLagu}
+\src{va}
+\meaning{\arthanonum{nananxlilxruva \hbox{aMganu} liMgavanunx saMpakiRsidAga athavA liMgadalilx oMdA\-dAga uMTAguva beLageV savxyasaMpakaRdiMda odagida \hbox{beLagu}. sAdhAraNa beLagu athavA beMkige yAvudAdarU vasutx Ahuti AdaMte I beLagige yAvudeV vasutx AhutiyAguvudilalx. I beLaginiMda kamaRgaLelalx suTaTxvu eMdu AlaMkArikavAgi heVLabahudeV horatu, deVshakAladalilxruva yAva vasutxvanUnx I AtamxjoyxVti suDalAradu (va.pa.koV. 422):}
+\ullekha{savxyasaMpakaRdiMda odagida beLagu, analana Ahutige horagAgipupxdu (savasaM. 8; moVLige. 1559-519).}}
+\end{entry}
+
+\begin{entry}
+\word{sAyada munanxve sAyuvudu}
+\src{va}
+\meaning{\arthanonum{deVhavu sAyuva modaleV `nAnu' eMba BAva satutxhoVguvudu; idu anuBAvigaLigaSeTxV sAdhayx. AdudariMda jiVvanumxkatxraSeTxV sAyada munanx sAyutAtxre (va.pa.koV. 408):}
+\ullekha{sAyada munanxve satutxdanaridu, ariyada munanxve mareduda kaMDu uBayasaMkaTakekx munanxve mana saMditutx mAreVshavxrA (savasaM. 8; manamA. 987-335).}}
+\end{entry}
+
+%%ha
+\begin{entry}
+\word{hadinAlukx terana Bakitx}
+\src{va}
+\meaning{\arthanonum{sAdhakanu tananx AdhAyxtimxka pathada pArxraMBika haMtadalilx jaMgamaliMgakekx hadinAlukx riVtiya Bakitxyanunx toVrisabeVku. rAjanobabxnige parxjeyu toVruva gwravavanenxV, Bakatxnu jaMgamanige toVrisutAtxne. I Bakitxyalilxruva hadinAlukx aMshagaLa vivara hiVgide:}}
+\newmeaning{\artha{liMgakekx majajxna mADisabeVku.} \artha{vasatxrXdiMda adanunx oresabeVku;} \artha{liMgakekx gaMdhavanUnx;} \artha{akaSxteyanUnx leVpisabeVku;} \artha{paterx puSapxgaLanunx apiRsabeVku;} \artha{dhUpAratiyanUnx;} \artha{diVpAratiyanUnx beLagabeVku;} \artha{neYveVdayx mADabeVku;} \artha{niVranunx apiRsabeVku;} \artha{tAMbUlavanunx apiRsabeVku;} \artha{UTada naMtara rAjanige suKAsana niVDuvaMte jaMgamaliMgakUkx suKAsana niVDabeVku;} \artha{rAjana saMtoVSakAkxgi avananunx hogaLi, avanige nataRnavanunx toVrisuvaMte, jaMgamaliMgakUkx maMtarx sotxVtarx giVta nataRnagaLu AgabeVku;} \artha{malagi edadxnaMtara rAjanige vasAtxrXlaMkAra, ABaraNagaLa dhAraNeyAguvaMte jaMgamaliMgakUkx AgabeVku;}
+\artha{rAjanige hiMtirugalu vAhanada EpARDu mADuvaMte jaMgamaliMgakUkx vAhanada EpARTu mADabeVku;} \artha{Adare I vacanadalilx idAvudanUnx mADabAradu, ideVnanUnx mADadeyeV parxsAdavanunx paDedukoLuLxvavanige guruliMgajaMgama uMTu, uLidavarige ilalx eMdu heVLalAgide. idara athaR, liMga\-vanAnxgali jaMgamavanAnxgali obabx sAdhAraNa rAjanaMte kANabAradu eMbudAgide (va.pa.koV. 425) (3:1528):}}
+\newmeaning{\ullekha{iMtiV hadinAlukx terada Bakitxyanu caraliMgaveMba jaMgamaliMgakekx dAsoVhava mADi parxsAdava koMba BakatxMge guruvuMTu, liMgavuMTu, jaMgamavuMTu, pAdoVdaka parxsAdavuMTu, AcAravuMTu, sadaBxkitxyuMTu. (savasaM. 3; cenanxba. 1467-536).}}
+\end{entry}
+
+\begin{entry}
+\word{hadinAlukx loVkagaLu (IreVLu loVka)}
+\src{va}
+\meaning{\arthanonum{1. ataLa, 2. vitaLa, 3. sutaLa, 4. rasAtaLa, 5. taLAtaLa, 6. mahAtaLa, 7. pAtALa, 8. BUloVka idara keLage; 9. BuvaloRVka, 10. savxloRVka, 11. mahaloRVka, 12. janaloRVka, 13. tapoVloVka matutx 14. satayx\-loVka I Aru BUloVkada meVle:}
+\ullekha{Adi anAdi hadinAlukxloVka kAla kalipxta maMtarx taMtarx... obabx sharaNa Bakitxya mADutitxpupxda kaMDenayayx (savasaM. 2; alalxma. 881-261); IreVLu Buvana, hadinAlukxloVkadoDeya mikikxna mAtina jAcnxnigaLetatxbalalxru? (savasaM. 3; cenanxba. 1197-414); amugeVshavxraliMgave, nimamx sharaNaru IreVLuBuvana hadinAlukxloVkadalilx liMga\-sahita opupxvaru. (savasaM. 5; amurA. 606-191); IreVLu BuvanaveMba hadinAlukx loVkaMgaLa dharisi ADutitxpaRvu. (savasaM. 8; bAciba. 202-80); IreVLu Buvanava hadinAlukx loVkavanoMdu iruve nuMgitutx noVDA. (savasaM. 10; jakakxNa. 1119-584).}}
+\end{entry}
+
+%%%%%%%
