ya to La, anubandha-1 and anubandha-2 sent to final proof

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -12,7 +12,8 @@
 
 
 \input macros
-\input dictionary
+\input dictionary1
+\input dictionary2
 %\input anu-dictionary
 \begin{document}
 %\fontsize{12pt}{14pt}\selectfont
@@ -24,6 +25,8 @@
 \setlength{\columnseprule}{.5pt}
 \input tex-for-print/jss_consolidated1
 \newpage
-%\input tex-for-print/anubandha-1.tex
+\input tex-for-print/anubandha-1.tex
 \end{multicols}
+\newpage
+\input tex-for-print/anubandha-2.tex
 \end{document}
