macros and mainfiles are updated

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -12,7 +12,7 @@
 
 
 \input macros
-\input dictionary1
+%\input dictionary1
 \input dictionary2
 %\input anu-dictionary
 \begin{document}
@@ -23,10 +23,11 @@
 
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
-\input tex-for-print/jss_consolidated1
-\newpage
-\input tex-for-print/anubandha-1.tex
+\input tex-for-print/jss-282-501.tex
+%\input tex-for-print/jss_consolidated1
+%\newpage
+%\input tex-for-print/anubandha-1.tex
 \end{multicols}
-\newpage
-\input tex-for-print/anubandha-2.tex
+%\newpage
+%\input tex-for-print/anubandha-2.tex
 \end{document}
