--- a/macros.tex
+++ b/macros.tex
@@ -8,7 +8,7 @@ headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
 \usepackage{textpos}
 
 \tolerance=4000
-%\defaulthyphenchar=32
+\defaulthyphenchar=32
 
 %~ \makeatletter
 %~ \def\@makechapterhead#1{%
