ta kaaradiMda ma kaarada varege upto page no. 514, sent to sabhaaprati

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1118,6 +1118,22 @@ BUtaBaviSayxdavxtaRmAnakekx horagAdavanu. adeV riVti paramAtamxnu elalx kaDeyU i
 
 %%%%ma
 \begin{entry}
+\word{maranoLagaNa kicucx}
+\src{va}
+\meaning{\arthanonum{parxtiyoMdu vasutxvinalilxyU paMcaBUtagaLive. Adare avu
+ samaparxmANadalilxruvudilalx. beMkiyeMba BUtavu beMkiyalilxruvaMte
+ niVrinalilxyU, kalilxnalilxyU, maradalilxyU irutatxde. niVrinalilx
+ beMkiyilalxdidadxre, niVru bisiyAguvudilalx. kalilxnalilx
+ beMkiyiruvudu kalulxgaLanunx oMdakokxMdu hoDedAga
+ vayxkatxvAgutatxde. adeV riVti marakekx beMki tAgidAga,
+ maradalilxdadx beMki uriyutatxde.}}
+\smallskip
+\newmeaning{\arthanonum{I viSayavanunx vacanakAraru upameyaMte baLasikoMDidAdxre. adeV
+ riVti kuruhinalilx (iSaTxliMgadalilx) arivu iruvudariMdaleV adanunx
+ kurita dhAyxnavu arivanunx kANuvudaralilx konegoLuLxtatxde (va.pa.koV. 297)}}
+\end{entry}
+
+\begin{entry}
 \word{mUgilalxdavaLu}
 \meaning{\arthanonum{mUgu vAsane paDeyuva iMdirxya; Adare `vAsane' eMba padakekx
  `hiMdina janamxda saMsAkxra' eMbathaRvU iruvudariMda
