corrections complete upto page no. 218

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1361,3 +1361,121 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \end{entry}
 
 %%%%%%%
+%sa
+\begin{entry}
+\word{sakaleVMdirxya muKadalilx moVhi}
+\src{va}
+\meaning{\arthanonum{aMganu tananx parxtiyoMdu iMdirxyavU parashivana bAyiyeMdu tiLidu, avanigoVsakxra tAnu tinanxbeVku, avanigoVsakxra tAnu noVDabeVku, eMdu muMtAgi parashivanalilx moVhiyAgiruvavanu (va.pa.koV. 388):}
+\ullekha{sakaleVMdirxyamuKadalilx moVhiyAgi, sadugxrukaruNAmaqtarasa tAneMdariyade enanx mana beragu nibebxragu AyitayAyx (savasaM. 5; akakxma. 25-08).}}
+\end{entry}
+
+\begin{entry}
+\word{saguNAnaMdasaninxhita sharaNa}
+\meaning{\arthanonum{anuBAvadalilx saguNa parashiva\-nalilx beretu AnaMda paDeyuva sharaNanu parashivanu elelxlilxyU idAdxneMdU, parashivaneV jagatAtxgi (sAkAra matutx saguNanAgi) toVrutitxdAdxneMdU tiLidu jagatetxMba shivaliVleyanunx noVDi AnaMdisutAtxne. aMtha sharaNanalelxV parashivanu saninxhitanAgidAdxne (va.pa.koV. 390).}}
+\newmeaning{\ni{saguNAnaMda saninxhitasharaNaH - saguNAnaMdeVna saninxhitashacx asw sharaNashacx - saguNanaMdasaninxhita sharaNaH}}
+\end{entry}
+
+\begin{entry}
+\word{sadABxvaleVpa gArxhaka aikayx}
+\src{va}
+\meaning{\arthanonum{aikayxsathxlada sAdhakanu Atamx eMba tananx aMgadalilxruva sadABxva eMba hasatxdiMda mahAliMgada bAyiyAda niBARvakekx bayalu athavA nivaRyalu eMbudanunx apiRsutAtxne. aMdare, tananx AtamxdalelxV avanu mahAliMgavanUnx parxtiSAThxpisiruvudariMda, avana Atamxdalilxna bayalanunx mahAliMgakekx apiRsidaMteyeV. hiVge aikayxnu tananx sadABxvavanUnx leVpisikoMDu mahAliMga gArxhakanAgiruvudariMda avanu sadABxvaleVpeYkayxvenisikoLuLxtAtxne (va.pa.koV. 392).}}
+\newmeaning{\ni{sadABxvasayx leVpaH - sadABxvaleVpaH; sadABxvaleVpasayx gArxhakaH - sadABxvaleVpa gArxhakaH; tasayx aikayxM - sadABxvaleVpagArxhakeYkayxM}}
+\end{entry}
+
+\begin{entry}
+\word{sapepxya Bakitx, sapepxya neVma}
+\src{va}
+\meaning{\arthanonum{sihi, upupx, huLi, kAra muMtAda ruciyanunx hecicxsuva vasutxgaLilalxda AhAraveV sapepxya AhAra. BakatxnAdavanu rucikaravAda AhAravanunx \hbox{vajiRsi}, sapepxya AhAravanenxV sivxVkarisutitxdadxre avana Bakitx hecucxtatxde eMba (suLuLx) naMbikeyiMda mADida Bakitx (va.pa.koV. 396):}
+\ullekha{aTaTx upipxna kaSaTxvAvudu? aDada upipxna leVsAvudu? biTaTx sapepxya Bakitx yAvudu? mUtarxnALada GAti biDadu (savasaM. 8; maDimA. 453-172).}}
+\end{entry}
+
+\begin{entry}
+\word{samatemuKa suKavirahita}
+\src{va}
+\meaning{\arthanonum{tananx aMtaHkaraNagaLanenxV parashivanige apiRsi, elalx beVku beVDagaLanUnx gedudx, suKaveV barali, duHKaveV barali, citatxshAMtiyanunx kaLedukoLaLxda samabudidhxyuLaLxvanu elalxvanUnx samatABAvadiMda parashivanigapiRsi suKapaDutAtxne. A suKaveV samatAsuKa. adanunx mADadavanu samatAmuKa suKavirahita (oLahorageMba BeVdaBAvavilalxdavanu)  (va.pa.koV. 397):}
+\ullekha{samatemuKa suKavirahitaMge saninxhitasuKApiRta shUnayx kANA (savasaM. 12; deVshikeVM. 363-115).}}
+\newmeaning{\ni{suKavirahitaH suKeVna virahitaH suKavirahitaH - samatemuKa suKavirahita}}
+\end{entry}
+
+\begin{entry}
+\word{samayava biDuvudu}
+\src{va}
+\meaning{\arthanonum{samayakekx takakx AcAragaLanunx mADade nilaRkiSxsuvudu (va.pa.koV. 397):}
+\ullekha{shiVlavaMta\-nAdaDe jAtiya biDabeVku. shivajAcnxniyAdaDe samayava biDabeVku (savasaM. 5; amuge. 691-214).}}
+\end{entry}
+% (udAharaNege, beLigegx iSaTxliMgapUje mADabeVkeMba vidhiyanunx nilaRkiSxsuvudu)
+
+\begin{entry}
+\word{samarasasuKa pariNAmi}
+\src{va}
+\meaning{\arthanonum{aikayxsathxlada sAdhakanu tananx sadABxva eMba hasatxdalilx mahAliMgavanunx kaMDu samarasaveMba BakitxyanAnxcarisuvAga avanige uMTAguva suKaveV samarasasuKa. samarasasuKapariNAmiyAda Ata elelxlUlx parashivananenxV kANutAtxne (va.pa.koV. 398):}
+\ullekha{samarasasuKapariNAmiyAgi muMde noVDutatx suLiyutidaR guru\-niraMjana cananxbasavaliMgavenanx pArxNaliMgiyedenisi (savasaM. 12; \hbox{deVshikeVM.} 455-138).}}
+\newmeaning{\ni{samarasasuKeV pariNAmaH asimxnaf asitx iti - samarasasuKapariNAmiV}}
+\end{entry}
+
+\begin{entry}
+\word{saraharida saMbaMdha}
+\src{va}
+\meaning{\arthanonum{huTuTxsAvugaLa mAleyanunx haridu parashivanoMdige mADida saMbaMdha:}
+\ullekha{shabadxmugadx\-vAda sharaNana citatxva BeVdisabahude? adu saraharida saMbaMdha (savasaM. 7; dAsoVsaM. 1162-370).}}
+\end{entry}
+
+\begin{entry}
+\word{savxtaMtirxyalalx, parataMtirxyalalx}
+\src{va}
+\meaning{\arthanonum{sAmAnayxvAgi AdhAyxtimxka pathadalilx naDeyalu pArxraMBisidavanu tananxnunx parataMtirxyeMdU, paramAtamxnanunx savxtaMtirxyeMdU bagedu tananx Bakitxyanunx toVrisutitxrutAtxne. iveraDU padagaLu sApeVkaSx padagaLu. yAvudeV vasutx athavA vayxkitx savxtaMtarx eninxsi\-koLaLxbeVkAdare, savxtaMtarxvalalxda hAgU tananxnunx avalaMbisuva vasutxgaLu, vayxkitxgaLu irabeVkAgutatxde. savxtaMtarxvAda oMdeV vasutxvidudx adananxvalaMbisuva yAvudeV vasutxvilalxdidadxre, A \hbox{vasutx} savxtaMtarxvU alalx, parataMtarxvU alalx. adeV riVti yAvudeV vasutx parataMtarxveninxsikoLaLxbeVkAdare, adakekx Asharxya koDuva vasutx irabeVkAgutatxde. ivugaLa saMbaMdhavanunx tAyi-magu saMbaMdhakekx hoVlisabahudu. tAyi eninxsikoLaLxbeVkAdare avaLige maguvirabeVkAgutatxde, hAgeyu magu irabeVkAdare tAyi irabeVkAgutatxde. Adare liMgAMgasAmarasayxda mUlaka paramAtamxnanunx sAvxnuBAvadiMda aritare, A paramAtamx savxtaMtirxyalalx, aritavanu parataMtirxyalalx. EkeMdare sAmarasayxdalilx jAcnxtaq jecnxVyagaLa saMbaMdha aLisihoVgutatxde (va.pa.koV. 422):}
+\ullekha{taninxMdarivaDe savxtaMtirxyalalx, idiriniMdarivaDe parataMtirxyalalx I uBayavaninxnAnxrige heVLuve? kaDaloLage kareda vAriyaMte, niHkaLaMka malilxkAjuRna (savasaM. 8; moVLimA. 1551-517).}}
+%\ullekha{niVvADisuva yaMtarxda taMtarxvalalxde savxtaMtirxyalalx... (savasaM. 7; guparxmaM. 360-122); nA naDevaDe savxtaMtirxyalalx... (savasaM. 8; manugu. 1083-365); nAnaridu kaMDeheneMdaDe savxtaMtirxyalalx. (savasaM. 8; moVLige. 1848-602); nAneMdaDe savxtaMtirxyalalx... (savasaM. 8; madhuva. 843-302).}}
+\end{entry}
+
+\begin{entry}
+\word{savxyaMparxkAsha kicucx}
+\src{va}
+\meaning{\arthanonum{anuBAviyu tananx anuBAvada oMdu haMtadalilx tAnu citetxMbudanunx ariyutAtxne. A citutx atayxMta parxkAshamAnavAda uriya (diVpada) rUpadalilx avanige kANisikoLuLxtatxde. nAvu kaNiNxniMda noVDida vasutxgaLu tamamx parxkAshavanunx beVroMdu vasutxviniMda paDedare, citetxMba joyxVtiyu savxyaMparxkAshavAgide (parashivaneV savxyaMparxkAshamAnavAda paraMjoyxVti):}
+\ullekha{uri hoge naMditutx, savxyaM parxkAsha\-vAgipapx uri uLiyitutx. A uri baMdu enanx karasathxladalalxDagitutx (savasaM. 9; saMgameV. 280-93).}}
+%\ullekha{savxyaMparxkAsharUpashacx jaMgamoVhi nigadayxteV... (savasaM. 1; basava. 1367-377); savxyaMparxkAshaliMgadalilx sadAsaninxhita kUDalacenanxsaMgayayx nimamx sharaNa. (savasaM. 3; cenanxba. 375-119); manada koneya moneya meVlaNa aMdina kaNaNx muMde savxyaMparxkAsha toVrutitxdadxDe tAnAgabalalxne?... (savasaM. 5; mukAtxya. 1102-326); beLage toVrisuva beLagoMDilalxvAgi savxyaMparxkAsha paripUNaRvAda nijavu nineV. (savasaM. 7; caMdima. 555-184); savxyaMparxkAshaliMgadalilx savxyaMjAcnxni niMdu savxyava toVrutihanu noVDA. (savasaM. 10; jakakxNa. 1530-678).}}
+\end{entry}
+
+\begin{entry}
+\word{sAvadhAnasuKapariNAmi}
+\src{va}
+\meaning{\arthanonum{parxsAdiya sAdhakanu shivaliMgavanunx tananx nirahaMkAraveMba hasatxdalilx kaMDu sAvadhAnaveMba Bakitxyanunx AcarisuvAga avanige tananx sumana hasatxdalilx muMdina sathxlada jaMgamaliMgavu kANisikoLuLxtatxde (va.pa.koV. 409):}
+\ullekha{sAvadhAna suKapariNAmiyAgi muMde noVDutatx suLiyutidaR jaMgamaliMgavenanx sumanahasatxdalilx (savasaM. 12; deVshikeVM. 455-143).}}
+\end{entry}
+
+\begin{entry}
+\word{sAvxnuBAva sananxdadhx}
+\src{va}
+\meaning{\arthanonum{jAcnxnaveMba beLakanunx nAvu noVDabeVkAdare adu pUje matitxtara kirxyegaLiMda sAdhayx\-vilalx. sharxdedhxyanunx beLesikoLaLxlu avu modalu AvashayxkavAdarU aveV koneyAgalAravu. jAcnxnada beLaganunx kANa\-beVkAdare koneyalilx sAvxnuBAva Avashayxka. kirxyegaLu namamxnunx sAtivxkaranAnxgi mADadidadxre sAvxnuBAva sAdhayxvilalx. sAvxnuBAvadalilx nAvu kANuva beLagu horaginadalalx, namamxlelxV avayxkatxvAgiruva beLaku (va.pa.koV. 424):}
+\ullekha{sharaNa tatigaLiMda karaNaMgaLa nivArisi-iMtapapx kirxyApUje, bAhayxda sharxdedhx, jAcnxnada beLagu, sAvxnuBAva sananxdadhx (savasaM 5, moVLige 946-302).}}
+\end{entry}
+
+\begin{entry}
+\word{suKava nishecxYvudu}
+\src{va}
+\meaning{\arthanonum{nishecxYsuvudu eMbudakekx KacitapaDisuvudu eMba sAmAnayx athaRvidadxrU, aneVka veVLe sAdhisuvudu, sAkASxtakxrisikoLuLxvudu eMba athaRdalilxyU adanunx baLasalAgutatxde. suMkada baMkaNaNxnu `suKavanunx nishecxYsalilalx, adu duHKakekx biVja' eMdu heVLuvAga adakekx `suKavanunx sAdhisidare, adu duHKakekx kAraNavAgutatxde' eMbathaRvide. suKavu heVge duHKakekx kAraNavAgutatxde eMbudu kelavara parxshenx. adakekx AdhAyxtimxka jiVvana naDesuvavara anuBavada utatxra hiVgide: nAvu suKa paTaTx meVle adanunx matetx matetx paDeyabeVkeMba Ase uMTAgutatxde. adanunx paDeyuvavaregU namage duHKa (kaSaTx) uMTAgutatxde. atiyAda suKadiMda namamx AroVgayx hALAgi, AgalU duHKa uMTAgabahudu. hiVge, suKavanunx sAdhisuvudariMda konege duHKa uMTAgutatxde eMba anuBavigaLa nuDiyalilx sAkaSuTx satayxvide (namamx suKavu kelavu veVLe itararige duHKa uMTumADutatxde) (va.pa.koV. 410).}
+\ullekha{suKava nishecxYsalilalx, adu duHKakekx biVja. duHKava nishecxYsalilalx, suKadoDalu (savasaM. 9; suMkada. 622-196).}}
+\end{entry}
+
+\begin{entry}
+\word{sujAcnxnaleVpa gArxhakasharaNa}
+\src{va}
+\meaning{\arthanonum{sharaNasathxlada sAdhakanu AkAsha eMba tananx aMgadalilxruva sujAcnxna eMba hasatxdiMda parxsAdaliMgada bAyiyAda shorxVtarxgaLige(kivi) shabadxvanunx apiRsutAtxne. aMdare, tananx kivigaLalelxV avanu parxsAdaliMgavanunx parxtiSAThxpisiruvudariMda, avana kivigaLige keVLisuva shabadxgaLelalxvU avugaLalilxruva parxsAdaliMgakekx apiRtavAdaMteyeV. hiVge sharaNanu tananx sujAcnxnavanunx leVpisikoMDu parxsAdaliMgavanunx garxhisiruvudariMda, avanu sujAcnxnaleVpagArxhaka sharaNa enisikoLuLxtAtxne, aMtha sharaNanu mahAliMgadalilx aikayxvAgutAtxne.}
+\ullekha{parxsAdaliMgAMga sujAcnxnaleVpagArxhaka aikayx aBeVdAnaMda paripUNaRmayavAda (savasaM. 3; cenanxba. 1412-504).}}
+\end{entry}
+
+\begin{entry}
+\word{subudidhxleVpagArxhaka maheVshavxra}
+\src{va}
+\meaning{\arthanonum{maheVshavxra sathxladalilx sAdhakanu apupx eMba tananx aMgadalilxruva subudidhx eMba hasatxdiMda guruliMgada bAyiyAda jihevxge ruciyanunx apiRsutAtxne. aMdare tananx nAlageyalelxV avanu guruliMga\-vanunx sAthxpisikoMDiruvudariMda, avana nAlagege baruva ruci\-yelalxvU adaralilxruva guruliMgakekx apiRtavAdaMteyeV. hiVge maheVshavxranu tananx subudidhxyanunx leVpisikoMDu guru\-liMgavanunx garxhisuvudariMda avanu subudidhxleVpagArxhaka maheV\-shavxranenisikoLuLxtAtxne, hAgU avanu shivaliMgavAgutAtxne:}
+\ullekha{guruliMgAMga subudidhxleVpagArxhaka maheVshavxra shivaliMgavAda (savasaM. 3; cenanxba. 1412-504).}}
+\end{entry}
+
+\begin{entry}
+\word{sumanaleVpagArxhaka pArxNaliMgi}
+\src{va}
+\meaning{\arthanonum{pArxNaliMgisathxladalilx sAdhakanu `vAyu' eMba tananx aMgadalilxruva sumana eMba hasatxdiMda jaMgamaliMgada bAyiyAda tavxgiMdirxyakekx sapxshaRvanunx apiRsutAtxne. aMdare, tananx camaRdalelx avanu jaMgamaliMgavanunx parxtiSAThxpisiruvudariMda, avana camaRvu paDeyuva savxshaRnavelalxvU adaralilxruva jaMgamaliMgakekx apiRtavAdaMteyeV. hiVge pArxNaliMgiyu tananx sumanavanunx leVpisi\-koMDu jaMgamaliMgada gArxhakanAgiruvudariMda, avana sumanaleVpagArxhakaneMdu kareyalAgutatxde. avanu muMde parxsAdaliMgadalilx aikayxvAgutAtxne:}
+\ullekha{jaMgamaliMgAMga sumanaleVpagArxhaka sharaNa mahAliMgavAda (savasaM. 3; cenanxba. 1412-504).}}
+\end{entry}
+
+
